# 5D-Neutrino-Mixing

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONVENTIONS_AND_PLAN.md  LICENSE  PROJECT_STATUS.md  README.md  TODO.md  constraint_evolution_plot.ipynb  meg2_comparison_single.ipynb  meg2_constraint_comparison.ipynb  meg2_constraint_comparison.py  mkk_vs_yukawa_constraint.ipynb  mkk_yukawa_tradeoff.ipynb  pyproject.toml  scan_analysis.ipynb  yukawa_analysis.ipynb  yukawa_mkk_tradeoff.ipynb
.orchestration/: CLEANUP_PLAN.md  CLEANUP_QUEUE.md  CLEANUP_REVIEW_R2.md  CONSTRAINTS_LOG.md  ISSUES.md  MERGE_PLAN.md  NEEDS_HUMAN_PHYSICS.md  ORCHESTRATOR_RUNBOOK.md  PHASE2_PROGRAM_LEDGER.md  PHASE3_SCAFFOLDING_CHANGES_R2.md  PLAN_REVIEW_R2.md  PRE_MERGE_STATE.md  REBUILD_LEDGER.md  SUSPICIOUS_CONSTRAINTS.md  cleanup_progress.json  progress.json  rs_ew_sector_design.md  rs_ew_sector_design_CONSENSUS.md
artifacts/: README.md  checksums.sha256  collaborator_5tev_points.csv  collaborator_5tev_points.provenance.json  collaborator_direct_affine_5_10tev_points.csv  collaborator_direct_affine_5_10tev_points.provenance.json  quarkscan_paper_rc1_manifest.json  quarkscan_paper_rc1_manifest_bundle.tar.gz.sha256
derivations/: README.md  conventions.tex  rs_ew_gauge_kk_coupling.tex
diagonalization/: README.md  __init__.py  diag.py  diagonalizationTest.ipynb
docs/: CUSTODIAL_EXPLAINER.tex  CUSTODIAL_LITERATURE_CATALOG.md  CUSTODIAL_PAPER_MAP.tex  CUSTODIAL_PLOTS_AND_ATTRIBUTION.md  CUSTODIAL_PROVENANCE.md  FLOOR_SUMMARY.md  KNOWN_ISSUES.md  MODEL_CONVENTIONS.md  OPEN_QUESTIONS.md  README.md  REPOSITORY_AUDIT_AND_RESEARCH_ROADMAP_2026-07-15.md  RS_vs_SM_flavor_note.tex  RS_vs_SM_flavor_reassessment_plan.md  STATE_OF_PROJECT.md  YUKAWA_SUBSTRUCTURE.md  artifact_manifest.md  custodial_problem_statement.md  kk_collider_problem_statement.md  paper_execution_decisions.md  pdg_quark_target_fix_explainer.md  quark_scan_assumptions.md  quark_scan_assumptions.tex  quark_scan_assumptions_compact.tex  quark_scan_consolidation_report.tex  quark_scan_constraint_update_2026-06.md  quark_scan_methodology_note.tex
flavorConstraints/: README.md  __init__.py  muToEGamma.ipynb  muToEGamma.py
flavor_catalog/: AGENTIC_WORKFLOW.md  CATALOG_METHODOLOGY.tex  HANDOFF_PROMPT.md  PRIORITY_TIERS.md  README.md  SESSION_NOTES.md  WEBSITE_BUILD_PROMPT.md  catalog_index.tex  catalog_index.yaml  catalog_master.tex  master_compile_report.md  master_compile_v02_report.md  master_compile_v03_report.md  master_compile_v04_report.md
flavor_catalog_constraints/: README.md  TEMPLATE.py  __init__.py  anchors.py  base.py  point_builder.py  registry.py  rs_ew_builder.py
neutrinoMass/: README.md  allowedMass.ipynb  massConfig.py  massConstraints.py
neutrinos/: PMNS.ipynb  README.md  __init__.py  allowedMass.ipynb  massConstraints.py  neutrinoValues.py
notebooks/: README.md  _build_anarchic_reproduction_vs_papers.py  _build_constraint_plots_vs_literature.py  _build_notebook.py  _build_sidebyside_vs_papers.py  _constraint_explorer_src.py  anarchic_reproduction_vs_papers.ipynb  constraint_evolution_plot.ipynb  constraint_explorer.ipynb  constraint_plots_vs_literature.ipynb  constraint_sidebyside_vs_papers.ipynb  dense_scan_2sigma_vs_1sigma_comparison.ipynb  dense_scan_mkk_constraints_pdg2024.ipynb  meg2_comparison_single.ipynb  meg2_constraint_comparison.ipynb  mkk_vs_yukawa_constraint.ipynb  mkk_yukawa_tradeoff.ipynb  pdg_quark_target_fix_verification.ipynb  rs_anarchy_analysis.ipynb  scan_analysis.ipynb  wq_quarkonly_explore.ipynb  wq_quarkonly_explore.py  yukawa_analysis.ipynb  yukawa_mkk_tradeoff.ipynb
qcd/: README.md  __init__.py  alphaS.ipynb  beta_function.py  constants.py  decoupling.py  mass_running.py  running.py
quarkConstraints/: AGENT_ORCHESTRATION_PLAN.md  ALLOWED_REGION_SCAN_STATUS.md  IMPLEMENTATION_PLAN.md  PAPER_0710_1869.md  PAPER_AGENT_WORKFLOW.md  PAPER_READY_REPRODUCTION_PLAN.md  QUARK_COMPLETION_PROGRAM.md  README.md  __init__.py  benchmarks.py  bsgamma.py  casagrande_profiles.py  ckm_extraction.py  collider_resonance.py  couplings.py  deltaf2.py  diagnostics.py  edm.py  finite_stats.py  fit.py  higgs_lfv.py  leptonic_tree.py  lfv_three_body.py  model.py  mu_e_conversion.py  oblique_stu.py  pdg_quark_masses.py  proxies.py  qcd_running.py  quark_benchmark_validation.ipynb  rare_b_baryon_dilepton.py  rare_b_dilepton.py  rare_b_kstar_dilepton.py  rare_b_nunu.py  rare_charm_dilepton.py  rare_charm_lfv_dilepton.py  rare_charm_lfv_semileptonic.py  rare_charm_semileptonic.py  rare_kaon_dilepton.py  rare_kaon_snd.py  (+12 more)
references/: PLOT_SPECS.md  REFERENCES.md  REPRODUCTION_NOTE.md  refs.bib
review_local/: collider_kk_review.tex  constraint_formulas.tex  constraint_formulas_review.md  custodial_review.tex  deltaF2_framework_review.tex  delta_m_s_review.tex  epsilon_k_review.tex  mu_e_gamma_review.tex  rs_flavor_anarchy_review.tex  stu_review.tex
scanParams/: IMPLEMENTATION_TASKS.md  README.md  THEORY_PRIORS.md  __init__.py  anarchy.py  postprocess.py  scan.py
scan_outputs/: c02c_crossings_summary.json  c02c_crossings_table.tex  followup_crossings_summary.json
scripts/: _audit_followup_crossings.py  alpha_s_running.ipynb  alpha_s_tev.csv  analyze_quark_scan.py  analyze_wq_quarkonly.py  anarchic_bauer_s1.py  anarchic_bauer_s1_zbb.py  anarchic_complex_m12.py  anarchic_reproduction_extract.py  audit_perez_randall_consistency.py  audit_wilson_rg.py  benchmark_perez_randall.py  benchmark_quark_0710_1869.py  benchmark_quark_mfv.py  build_constraint_matrix.py  build_wq_quarkonly_comparison.py  c02c_post_process.py  calibrate_phase0.py  compare_2007_vs_modern.py  compare_quark_bulk_mass_maps.py  compute_per_quark_residuals.py  export_accepted_quark_scan.py  export_accepted_quark_scan_with_yukawas.py  export_collaborator_5tev_points.py  export_collaborator_direct_affine_points.py  export_quark_0710_1869_artifacts.py  extract_plot_quantities.py  gen_sidebyside_points.py  instrument_epsK_phase.py  merge_modern_quark_scan.sbatch  perturb_yukawa_stability.py  plot_allowed_region.py  plot_perturbation_study.py  (+45 more)
(+3495 files in other folders)
