[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-5d-neutrino-mixing"
version = "0.1.0"
description = "RS 5D lepton-sector tools: overlaps, KK masses, neutrino data, Yukawa inversion"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Oscar Barrera" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pre-commit>=3.6",
  "ruff>=0.11.0",
  "nbstripout>=0.8.1"
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "warpConfig",
  "neutrinos",
  "solvers",
  "diagonalization",
  "yukawa",
  "scanParams",
  "quarkConstraints*",
  "flavorConstraints",
  "qcd"
]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
