[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-5d-neutrino-mixing"
version = "0.1.0"
description = "RS 5D lepton-sector tools: overlaps, KK masses, neutrino data, Yukawa inversion"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Oscar Barrera" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pre-commit>=3.6",
  "ruff>=0.11.0",
  "nbstripout>=0.8.1"
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "warpConfig",
  "neutrinos",
  "solvers",
  "diagonalization",
  "yukawa",
  "scanParams",
  "quarkConstraints*",
  "flavorConstraints",
  "qcd",
  "flavor_catalog_constraints*"
]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
"quarkConstraints/modern/*.py" = ["E402", "E501", "F401", "F811", "I001"]
"quarkConstraints/paper_0710_1869/*.py" = ["B009", "E501", "I001"]
"quarkConstraints/fit.py" = ["E501"]
"quarkConstraints/qcd_running.py" = ["B007"]
"quarkConstraints/scan.py" = ["E501"]
"scripts/analyze_quark_scan.py" = ["B007", "F401", "F841", "I001", "E501"]
"scripts/benchmark_quark_0710_1869.py" = ["E501"]
"scripts/compare_2007_vs_modern.py" = ["F401", "F841", "I001"]
"scripts/plot_allowed_region.py" = ["F401", "I001"]
"scripts/plot_publication_figures.py" = ["E402", "F841", "I001"]
"tests/test_epsilon_k_physics.py" = ["F401", "I001"]
"tests/test_modern*.py" = ["E501", "F401", "I001"]
"tests/test_paper_*.py" = ["E501", "F401", "I001"]
"tests/test_qcd_running.py" = ["F401", "I001"]
"tests/test_quark_fit.py" = ["E501", "I001"]
"flavor_catalog_constraints/TEMPLATE.py" = ["F401"]

[tool.pytest.ini_options]
xfail_strict = true
