[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-5d-neutrino-mixing"
version = "0.1.0"
description = "RS 5D lepton-sector tools: overlaps, KK masses, neutrino data, Yukawa inversion"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Oscar Barrera" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pre-commit>=3.6",
  "ruff>=0.11.0",
  "nbstripout>=0.8.1"
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "warpConfig",
  "neutrinos",
  "solvers",
  "diagonalization",
  "yukawa",
  "scanParams",
  "quarkConstraints*",
  "flavorConstraints",
  "qcd",
  "flavor_catalog_constraints*"
]

[tool.ruff]
target-version = "py39"
line-length = 100
# Lint scope (audit P0-6): production/paper code is linted — the library
# packages, scripts/, and tests/. Historical and process trees are explicitly
# out of scope rather than papered over with per-rule ignores:
#   .orchestration/ (multi-agent build ledgers and run logs),
#   reports/ (report/figure builder one-offs), notebooks/ (executed artifacts).
extend-exclude = ["*.ipynb", ".orchestration", "reports", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
# scripts/ bootstrap sys.path before imports, so E402 is structural there.
"scripts/*.py" = ["E402"]
# Research/exploratory analysis scripts keep their terse one-liner style;
# production drivers (run_full_catalog_scan, benchmark_*) are fully linted
# apart from the bootstrap E402 above.
"scripts/analyze_wq_quarkonly.py" = ["E501"]
"scripts/anarchic_*.py" = ["E501", "E702", "E731", "F841"]
"scripts/build_constraint_matrix.py" = ["E501"]
"scripts/build_wq_quarkonly_comparison.py" = ["E501"]
"scripts/export_*.py" = ["E501"]
"scripts/extract_plot_quantities.py" = ["B007", "E501"]
"scripts/instrument_epsK_phase.py" = ["E501", "E702"]
"scripts/perturb_yukawa_stability.py" = ["E501", "E701", "E702", "F841", "I001"]
"scripts/plot_perturbation_study.py" = ["E501", "E701", "E702", "I001"]
"scripts/plot_rs_anarchy_summary.py" = ["E741"]
"scripts/rankone_u2_lane.py" = ["E501", "E731"]
"scripts/rs_anarchy_*.py" = ["B007", "E501"]
"scripts/tuning_radius_epsK.py" = ["E501", "E701", "E702", "I001"]
"scripts/yukawa_per_element_anatomy.py" = ["E702"]
"scripts/yukawa_perturbation_study.py" = ["E501", "E701", "E702"]
# Website generator utilities (long anchor/citation strings).
"flavor_catalog/website/scripts/*.py" = ["E402", "E501"]
"quarkConstraints/modern/*.py" = ["E402", "E501", "F401", "F811", "I001"]
"quarkConstraints/paper_0710_1869/*.py" = ["B009", "E501", "I001"]
"quarkConstraints/fit.py" = ["E501"]
"quarkConstraints/qcd_running.py" = ["B007"]
"quarkConstraints/scan.py" = ["E501"]
"scripts/analyze_quark_scan.py" = ["B007", "F401", "F841", "I001", "E501"]
"scripts/benchmark_quark_0710_1869.py" = ["E501"]
"scripts/compare_2007_vs_modern.py" = ["F401", "F841", "I001"]
"scripts/plot_allowed_region.py" = ["F401", "I001"]
"scripts/plot_publication_figures.py" = ["E402", "F841", "I001"]
"tests/test_epsilon_k_physics.py" = ["F401", "I001"]
"tests/test_modern*.py" = ["E501", "F401", "I001"]
"tests/test_paper_*.py" = ["E501", "F401", "I001"]
"tests/test_qcd_running.py" = ["F401", "I001"]
"tests/test_quark_fit.py" = ["E501", "I001"]
"flavor_catalog_constraints/TEMPLATE.py" = ["F401"]

[tool.pytest.ini_options]
xfail_strict = true
testpaths = ["tests"]
